minimalistic version, state doesnt work, dont know how to handle checkbox + enum stuff

--- a/frontend/src/components/TodoItem.css
+++ b/frontend/src/components/TodoItem.css
@@ -1,4 +1,6 @@
 .post-field{
-    display: grid;
-    justify-content: left;
+    border-style: solid;
+    border-radius: 5px;
+    width: 50%;
+
 }
